pages assignmentb correction

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             I had my early Education in Nigeria at Delta State precisely.
         </p>
     </section>
-    <a href="./page2.html">page2</a>
+    <a href="./index2.html">page2</a>
     
     
 
